# What_is_next

./: .gitignore  CMakeLists.txt  execute.sh
data/: memory.txt
src/: main  main.cc  tools.cc  tools.h
src/Calculator/: Calculator.cc  Calculator.h
src/Calculator/Sort/: Methods.h  Sort.h
src/Calculator/Sort/Insertion/: Insertion.cc  Insertion.h
src/Calculator/Subject/: Subject.h
src/Menu/: Config_menu.h  Menu.cc  Menu.h  Menu_tools.cc  Menu_tools.h
src/Sort/: Methods.cc  Methods.h
